gac_sb/objects/INNOvalo__c.object
<CustomObject>
    <fields>
        <fullName>Annee_de_declaration__c</fullName>
        <label>Année de déclaration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1ère année</fullName>
                </value>
                <value>
                    <fullName>2ème année</fullName>
                </value>
                <value>
                    <fullName>&gt; 3 ans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChiffreAffaire__c</fullName>
        <label>Chiffre d&apos;affaire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commentaires_DT__c</fullName>
        <label>Commentaires sur les DT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_amortissementBrevet__c</fullName>
        <label>Commentaires sur les DA de brevets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_amortissement__c</fullName>
        <label>Commentaires sur les DA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_avanceRemboursable__c</fullName>
        <label>Commentaires sur les avances remb.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_brevetAssu__c</fullName>
        <label>Commentaires sur les assu. de brevets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_brevetDef__c</fullName>
        <label>Commentaires sur défenses de brevets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_brevetPM__c</fullName>
        <label>Commentaires sur les PM de brevets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_jeuneDocteur__c</fullName>
        <label>Commentaires sur les jeunes docteurs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_miseDisposition__c</fullName>
        <label>Commentaires sur les mises à disposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_normalisation__c</fullName>
        <label>Commentaires sur normalisations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_prestataire__c</fullName>
        <label>Commentaires sur les prestataires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_projet__c</fullName>
        <label>Commentaires sur les projets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_remboursementAvance__c</fullName>
        <label>Commentaires sur les remb. avances</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_salarie__c</fullName>
        <label>Commentaires sur les salariés</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_subvention__c</fullName>
        <label>Commentaires sur les subventions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_veille__c</fullName>
        <label>Commentaires sur veilles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultants_exterieurs__c</fullName>
        <label>Consultants exterieurs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultants_fiscalistes__c</fullName>
        <label>Consultants fiscalistes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultants_scientifiques__c</fullName>
        <label>Consultants scientifiques</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_soumis_a_facturation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT soumis à facturation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_approbation__c</fullName>
        <label>Date d&apos;approbation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_collecte_info_DT__c</fullName>
        <label>Date collecte info DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_cloture__c</fullName>
        <label>Date de clôture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_debut_agrement__c</fullName>
        <label>Date de début d&apos;agrément</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_CERFA__c</fullName>
        <label>Date d&apos;échéance CERFA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_CF__c</fullName>
        <label>Date d&apos;échéance CF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_DT__c</fullName>
        <inlineHelpText>Date à laquelle le rendu de DT est prévu. Elle est modifiable</inlineHelpText>
        <label>Date d&apos;échéance DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_estimations__c</fullName>
        <label>Date d&apos;échéance estimations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_envoi_valorisation__c</fullName>
        <label>Date d&apos;envoi valorisation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_facturation_GAC__c</fullName>
        <label>Date facturation GAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_fin_agrement__c</fullName>
        <label>Date de fin d&apos;agrément</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_reception_doc_DT__c</fullName>
        <label>Date réception doc DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_reception_doc_fin__c</fullName>
        <label>Date réception doc fin.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_rendu_CERFA__c</fullName>
        <label>Date de rendu CERFA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_rendu_DT__c</fullName>
        <inlineHelpText>Date réelle à laquelle le DT a été rendu. Ne peut être supérieure à aujourd&apos;hui</inlineHelpText>
        <label>Date de rendu DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_rendu_estimations__c</fullName>
        <label>Date de rendu estimations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_validation_DT_par_client__c</fullName>
        <label>Date de validation DT par le client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_validation_perimetre__c</fullName>
        <label>Date de validation de périmètre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_validation_valo_par_client__c</fullName>
        <label>Date de validation valo par le client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demande_de_remboursement_anticipe__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PME au sens communautaire</inlineHelpText>
        <label>Demande de remboursement anticipé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_amortissementBrevet__c</fullName>
        <label>Dossier serveur DA de brevets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_amortissement__c</fullName>
        <label>Dossier serveur DA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_avanceRemboursable__c</fullName>
        <label>Dossier serveur avances remb.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_brevetAssu__c</fullName>
        <label>Dossier serveur assu. de brevets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_brevetDef__c</fullName>
        <label>Dossier serveur défenses de brevets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_brevetPM__c</fullName>
        <label>Dossier serveur PM de brevets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_jeuneDocteur__c</fullName>
        <label>Dossier serveur jeunes docteurs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_miseDisposition__c</fullName>
        <label>Dossier serveur mises à disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_normalisation__c</fullName>
        <label>Dossier serveur normalisations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_prestataire__c</fullName>
        <label>Dossier serveur prestataires</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_projet__c</fullName>
        <label>Dossier serveur projets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_remboursementAvance__c</fullName>
        <label>Dossier serveur remb. avances</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_salarie__c</fullName>
        <label>Dossier serveur salariés</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_subvention__c</fullName>
        <label>Dossier serveur subventions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_veille__c</fullName>
        <label>Dossier serveur veilles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effectif__c</fullName>
        <label>Effectif</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entité</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Valorisations (Entité)</relationshipLabel>
        <relationshipName>Valorisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entite_prod_id__c</fullName>
        <externalId>true</externalId>
        <label>Entité prod id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etat_CF__c</fullName>
        <label>Etat CF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_DT__c</fullName>
        <label>Etat DT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A faire</fullName>
                    <default>true</default>
                    <label>A faire</label>
                </value>
                <value>
                    <fullName>En validation</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_info_fin_recue__c</fullName>
        <label>Etat info fin. reçue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A faire</fullName>
                    <default>true</default>
                    <label>A faire</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_info_recue_DT__c</fullName>
        <label>Etat info reçue DT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A lancer</fullName>
                    <default>true</default>
                    <label>A lancer</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Besoin compléments</fullName>
                </value>
                <value>
                    <fullName>Validé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_remboursement__c</fullName>
        <label>Etat du remboursement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En attente</fullName>
                </value>
                <value>
                    <fullName>Effectué</fullName>
                </value>
                <value>
                    <fullName>Refusé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_valorisation__c</fullName>
        <label>Etat valorisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A faire</fullName>
                    <default>true</default>
                    <label>A faire</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>En validation</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Honoraires_N1_a_deduire_option1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Honoraires N-1 à déduire option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_N1_a_deduire_option2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Honoraires N-1 à déduire option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_N1_a_deduire_option3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Honoraires N-1 à déduire option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_N1_a_deduire_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_honoraires_N1__c,1,Honoraires_N1_a_deduire_option1__c,2,Honoraires_N1_a_deduire_option2__c,3,Honoraires_N1_a_deduire_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Honoraires N-1 à déduire option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_N_a_deduire_optionFinaleManue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Honoraires N à déduire option ret manuel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_en_jeux__c</fullName>
        <label>Honoraires en jeux</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_fiscale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Si l&apos;entité est intégrée fiscalement à une autre, on la définie ici</description>
        <label>Intégration fiscale</label>
        <referenceTo>INNOvalo__c</referenceTo>
        <relationshipLabel>Entités intégrées fiscalement</relationshipLabel>
        <relationshipName>valosIntegrees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jour_mois_de_cloture_fiscale__c</fullName>
        <label>Date de clôture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>31 Janvier</fullName>
                </value>
                <value>
                    <fullName>28 Février</fullName>
                </value>
                <value>
                    <fullName>31 Mars</fullName>
                </value>
                <value>
                    <fullName>30 Avril</fullName>
                </value>
                <value>
                    <fullName>31 Mai</fullName>
                </value>
                <value>
                    <fullName>30 Juin</fullName>
                </value>
                <value>
                    <fullName>31 Juillet</fullName>
                </value>
                <value>
                    <fullName>31 Août</fullName>
                </value>
                <value>
                    <fullName>30 Septembre</fullName>
                </value>
                <value>
                    <fullName>31 Octobre</fullName>
                </value>
                <value>
                    <fullName>30 Novembre</fullName>
                </value>
                <value>
                    <fullName>31 Décembre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managers__c</fullName>
        <label>Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MissionCIR__c</fullName>
        <label>Mission CIR</label>
        <referenceTo>INNOmission__c</referenceTo>
        <relationshipLabel>Valorisations</relationshipLabel>
        <relationshipName>Valorisations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mobilisation_creance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobilisation de créance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MontantTotaDepensesOptionFinalePlafonne__c</fullName>
        <label>Montant Total Dép. OptionFin. Plafonné</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MontantTotalDepensesOption1Plafonne__c</fullName>
        <label>Montant Total Dép. Option1 Plafonné</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MontantTotalDepensesOption2Plafonne__c</fullName>
        <label>Montant Total Dép. Option2 Plafonné</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MontantTotalDepensesOption3Plafonne__c</fullName>
        <label>Montant Total Dép. Option3 Plafonné</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_N_base_option1__c</fullName>
        <formula>MontantTotalDepensesOption1Plafonne__c * IF(RecordType.DeveloperName = &apos;CIR&apos;, MissionCIR__r.Taux_CIR__c, MissionCIR__r.TauxCII__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR N (base de calcul) option 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_N_base_option2__c</fullName>
        <formula>MontantTotalDepensesOption2Plafonne__c *  IF(RecordType.DeveloperName = &apos;CIR&apos;, MissionCIR__r.Taux_CIR__c, MissionCIR__r.TauxCII__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR N (base de calcul) option 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_N_base_option3__c</fullName>
        <formula>MontantTotalDepensesOption3Plafonne__c * IF(RecordType.DeveloperName = &apos;CIR&apos;, MissionCIR__r.Taux_CIR__c, MissionCIR__r.TauxCII__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR N (base de calcul) option 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_N_base_optionFinale__c</fullName>
        <formula>MontantTotaDepensesOptionFinalePlafonne__c * IF(RecordType.DeveloperName = &apos;CIR&apos;, MissionCIR__r.Taux_CIR__c, MissionCIR__r.TauxCII__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR N (base de calcul) opt reten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_option1__c</fullName>
        <formula>Montant_total_dep_apres_dedu_option1__c * IF(RecordType.DeveloperName = &apos;CIR&apos;, MissionCIR__r.Taux_CIR__c, MissionCIR__r.TauxCII__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant du CIR définitif option 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_option2__c</fullName>
        <formula>Montant_total_dep_apres_dedu_option2__c * IF(RecordType.DeveloperName = &apos;CIR&apos;, MissionCIR__r.Taux_CIR__c, MissionCIR__r.TauxCII__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant du CIR définitif option 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_option3__c</fullName>
        <formula>Montant_total_dep_apres_dedu_option3__c * IF(RecordType.DeveloperName = &apos;CIR&apos;, MissionCIR__r.Taux_CIR__c, MissionCIR__r.TauxCII__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant du CIR définitif option 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_optionFinale__c</fullName>
        <formula>Montant_total_dep_apres_dedu_optionFinal__c * IF(RecordType.DeveloperName = &apos;CIR&apos;, MissionCIR__r.Taux_CIR__c, MissionCIR__r.TauxCII__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR définitif retenu(après dédu)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_dep_apres_dedu_option1__c</fullName>
        <formula>MontantTotalDepensesOption1Plafonne__c - Honoraires_N_a_deduire_option1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total dép. après dédu. opt 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_dep_apres_dedu_option2__c</fullName>
        <formula>MontantTotalDepensesOption2Plafonne__c - Honoraires_N_a_deduire_option2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total dép. après dédu. opt 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_dep_apres_dedu_option3__c</fullName>
        <formula>MontantTotalDepensesOption3Plafonne__c - Honoraires_N_a_deduire_option3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total dép. après dédu. opt 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_dep_apres_dedu_optionFinal__c</fullName>
        <formula>MontantTotaDepensesOptionFinalePlafonne__c - Honoraires_N_a_deduire_optionFinaleManue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total dép. après dédu. opt reten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_option1__c</fullName>
        <formula>Total_salarie_option1__c + 
Total_miseDisposition_option1__c +
Total_jeuneDocteur_option1__c +
Total_amortissement_option1__c +
Total_frais_fonctionnement_option1__c +
Total_brevetPM_option1__c +
Total_brevetDef_option1__c +
Total_amortissementBrevet_option1__c +
Total_brevetAssu_option1__c +
Total_normalisation_option1__c +
Total_veille_option1__c +
Total_prestataire_option1__c +
Total_remboursementAvance_option1__c -
Total_subvention_option1__c -
Total_avanceRemboursable_option1__c -
Honoraires_N1_a_deduire_option1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total des dépenses option 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_option2__c</fullName>
        <formula>Total_salarie_option2__c + 
Total_miseDisposition_option2__c +
Total_jeuneDocteur_option2__c +
Total_amortissement_option2__c +
Total_frais_fonctionnement_option2__c +
Total_brevetPM_option2__c +
Total_brevetDef_option2__c +
Total_amortissementBrevet_option2__c +
Total_brevetAssu_option2__c +
Total_normalisation_option2__c +
Total_veille_option2__c +
Total_prestataire_option2__c +
Total_remboursementAvance_option2__c -
Total_subvention_option2__c -
Total_avanceRemboursable_option2__c -
Honoraires_N1_a_deduire_option2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total des dépenses option 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_option3__c</fullName>
        <formula>Total_salarie_option3__c + 
Total_miseDisposition_option3__c +
Total_jeuneDocteur_option3__c +
Total_amortissement_option3__c +
Total_frais_fonctionnement_option3__c +
Total_brevetPM_option3__c +
Total_brevetDef_option3__c +
Total_amortissementBrevet_option3__c +
Total_brevetAssu_option3__c +
Total_normalisation_option3__c +
Total_veille_option3__c +
Total_prestataire_option3__c +
Total_remboursementAvance_option3__c -
Total_subvention_option3__c -
Total_avanceRemboursable_option3__c -
Honoraires_N1_a_deduire_option3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total des dépenses option 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_optionFinale__c</fullName>
        <formula>Total_salarie_optionFinale__c + 
Total_miseDisposition_optionFinale__c + 
Total_jeuneDocteur_optionFinale__c + 
Total_amortissement_optionFinale__c + 
Total_frais_fonctionnement_optionFinale__c + 
Total_brevetPM_optionFinale__c + 
Total_brevetDef_optionFinale__c + 
Total_amortissementBrevet_optionFinale__c + 
Total_brevetAssu_optionFinale__c + 
Total_normalisation_optionFinale__c + 
Total_veille_optionFinale__c + 
Total_prestataire_optionFinale__c + 
Total_remboursementAvance_optionFinale__c - 
Total_subvention_optionFinale__c - 
Total_avanceRemboursable_optionFinale__c - 
Honoraires_N1_a_deduire_optionFinale__c</formula>
        <label>Montant total dép. retenu (avant dédu)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nom_brigade__c</fullName>
        <label>Nom de la brigade</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_fiscale_retenue__c</fullName>
        <label>Option fiscale retenue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Option_fiscale_retenue_auto__c</fullName>
        <formula>CASE(Option_retenue_amortissement__c + Option_retenue_amortissementBrevet__c + Option_retenue_brevetAssu__c + Option_retenue_avanceRemboursable__c + Option_retenue_brevetDef__c + Option_retenue_honoraires_N1__c + Option_retenue_jeuneDocteur__c + Option_retenue_miseDisposition__c + Option_retenue_normalisation__c + Option_retenue_brevetPM__c + Option_retenue_prestataire_agree__c + Option_retenue_prestataire_public__c + Option_retenue_remboursementAvance__c + Option_retenue_salarie__c + Option_retenue_subvention__c + Option_retenue_veille__c ,
0, &apos;&apos;,
IF(RecordType.DeveloperName == &apos;CIR&apos;, 16, 14), &apos;Option 1&apos;,
IF(RecordType.DeveloperName == &apos;CIR&apos;, 32, 28), &apos;Option 2&apos;,
IF(RecordType.DeveloperName == &apos;CIR&apos;, 48, 42), &apos;Option 3&apos;,
&apos;Option Mixte&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option fiscale retenue Automatique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_retenue_amortissementBrevet__c</fullName>
        <label>Option retenue amortissements brevets</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_amortissement__c</fullName>
        <label>Option retenue amortissements</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_avanceRemboursable__c</fullName>
        <label>Option retenue avances remboursables</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_brevetAssu__c</fullName>
        <label>Option retenue assurances de brevets</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_brevetDef__c</fullName>
        <label>Option retenue défenses de brevets</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_brevetPM__c</fullName>
        <label>Option retenue PM brevets</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_honoraires_N1__c</fullName>
        <label>Option retenue honoraires N-1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_jeuneDocteur__c</fullName>
        <label>Option retenue jeunes docteurs</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_miseDisposition__c</fullName>
        <label>Option retenue mises à disposition</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_normalisation__c</fullName>
        <label>Option retenue normalisations</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_prestataire_agree__c</fullName>
        <label>Option retenue prestataires agréés</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_prestataire_public__c</fullName>
        <label>Option retenue prestataires publics</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_remboursementAvance__c</fullName>
        <label>Option retenue remboursements d&apos;avances</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_salarie__c</fullName>
        <label>Option retenue salariés</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_retenue_subvention__c</fullName>
        <label>Option retenue subventions</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>